fix: Align card details better to take less space

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,5 +1,5 @@
 $card-spacing: 16px;
 $card-padding: 8px;
 $stack-spacing: 12px;
-$stack-width: 260px;
+$stack-width: 280px;
 $board-spacing: 16px;
